FKI til OS2sub less

--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/stylesheet.less
@@ -1,3 +1,17 @@
 @import 'variables/loader';
 @import 'vendor/loader';
 @import 'template/loader';
+
+
+.banner {
+	margin-bottom: 30px;
+	border-radius: 4px;
+	.banner-wrapper {
+		padding: 30px 50px;
+		.banner-headline 	{ font-size: 48px;}
+		.banner-text		{ font-size: 32px;}
+		&.color-1 { color: #FFF;}
+		a { .btn; 
+			.btn-default;}
+	}
+}
