--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/comment.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/comment.less
@@ -34,7 +34,7 @@
 
 	.comment-body-wrapper {
 
-		.fki-comment-info {
+		.os2sub-comment-info {
 
 			span {
 				font-style: italic;
@@ -153,4 +153,4 @@
 // --------------------------------------------------
 
 // Comment mixin
-.fki-mixin-comment() {}
+.os2sub-mixin-comment() {}
