--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/footer-elements.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/footer-elements.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-footer-elements
+// | - .os2sub-footer-elements
 // |
 
 // --------------------------------------------------
@@ -26,9 +26,9 @@
 // --------------------------------------------------
 
 // Footer elements
-.fki-footer-elements {
+.os2sub-footer-elements {
 
-	.fki-footer-element {
+	.os2sub-footer-element {
 		font-size: @fki-footer-elements-element-font-size;
 		font-weight: @fki-footer-elements-element-font-weight;
 		color: @fki-footer-elements-element-text-color;
@@ -49,7 +49,7 @@
 			}
 		}
 
-		+ .fki-footer-element {
+		+ .os2sub-footer-element {
 			margin-left: 10px;
 		}
 	}
@@ -65,77 +65,77 @@
 @media @media-query-mobile {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Print
 @media print {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // Touch
 .touch {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // No touch
 .no-touch {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2sub-footer-elements {}
 }
 
 // --------------------------------------------------
@@ -143,4 +143,4 @@
 // --------------------------------------------------
 
 // Footer elements mixin
-.fki-mixin-footer-elements() {}
+.os2sub-mixin-footer-elements() {}
