--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/full-width-image.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/full-width-image.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-full-width-image
+// | - .os2sub-full-width-image
 // |
 
 // --------------------------------------------------
@@ -15,7 +15,7 @@
 // --------------------------------------------------
 
 // Full width image
-.fki-full-width-image {
+.os2sub-full-width-image {
 
     // Image
     img {
@@ -32,77 +32,77 @@
 @media @media-query-mobile {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Print
 @media print {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // Touch
 .touch {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // No touch
 .no-touch {
 
     // Full width image
-    .fki-full-width-image {}
+    .os2sub-full-width-image {}
 }
 
 // --------------------------------------------------
@@ -110,5 +110,5 @@
 // --------------------------------------------------
 
 // Full width image mixin
-.fki-mixin-full-width-image() {}
+.os2sub-mixin-full-width-image() {}
 
