--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/links.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/links.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-links
+// | - .os2sub-links
 // |
 
 // --------------------------------------------------
@@ -25,7 +25,7 @@
 // --------------------------------------------------
 
 // Links
-.fki-links {
+.os2sub-links {
 
 	.number-of-files a,
 	.flag {
@@ -124,77 +124,77 @@
 @media @media-query-mobile {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Print
 @media print {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // Touch
 .touch {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // No touch
 .no-touch {
 
 	// Links
-	.fki-links {}
+	.os2sub-links {}
 }
 
 // --------------------------------------------------
@@ -202,4 +202,4 @@
 // --------------------------------------------------
 
 // Links mixin
-.fki-mixin-links() {}
+.os2sub-mixin-links() {}
