--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/page-layout/breadcrumb.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/page-layout/breadcrumb.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-breadcrumb-container
+// | - .os2sub-breadcrumb-container
 // |
 
 // --------------------------------------------------
@@ -25,7 +25,7 @@
 // --------------------------------------------------
 
 // Breadcrumb
-.fki-breadcrumb-container {
+.os2sub-breadcrumb-container {
 	padding: 10px;
 
 	.breadcrumb {
@@ -69,14 +69,14 @@
 @media @media-query-mobile {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {
+	.os2sub-breadcrumb-container {
 		display: none;
 	}
 }
@@ -85,63 +85,63 @@
 @media @media-query-tablet {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Print
 @media print {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // Touch
 .touch {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // No touch
 .no-touch {
 
 	// Breadcrumb
-	.fki-breadcrumb-container {}
+	.os2sub-breadcrumb-container {}
 }
 
 // --------------------------------------------------
@@ -149,4 +149,4 @@
 // --------------------------------------------------
 
 // Breadcrumb mixin
-.fki-mixin-breadcrumb() {}
+.os2sub-mixin-breadcrumb() {}
