--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/list/list-event.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/list/list-event.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-list-event
+// | - .os2sub-list-event
 // |
 
 // --------------------------------------------------
@@ -17,12 +17,12 @@
 // --------------------------------------------------
 
 // List - event
-.fki-list-event {
+.os2sub-list-event {
 
-	.fki-list-heading {
+	.os2sub-list-heading {
 
-		.fki-list-heading-calendar-date,
-		.fki-list-heading-title {
+		.os2sub-list-heading-calendar-date,
+		.os2sub-list-heading-title {
 			float: left;
 		}
 
@@ -50,77 +50,77 @@
 @media @media-query-mobile {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Print
 @media print {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // Touch
 .touch {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // No touch
 .no-touch {
 
 	// List - event
-	.fki-list-event {}
+	.os2sub-list-event {}
 }
 
 // --------------------------------------------------
@@ -128,4 +128,4 @@
 // --------------------------------------------------
 
 // List - event mixin
-.fki-mixin-list-event() {}
+.os2sub-mixin-list-event() {}
