--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser-message-notification.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser-message-notification.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-message-notification-teaser
+// | - .os2sub-message-notification-teaser
 // |
 
 // --------------------------------------------------
@@ -18,14 +18,14 @@
 // --------------------------------------------------
 
 // Message notification
-.fki-message-notification-teaser {
+.os2sub-message-notification-teaser {
 
-	&.fki-box {
+	&.os2sub-box {
 		background-color: @fki-message-notification-teaser-background-color;
 
-		.fki-teaser-heading {
+		.os2sub-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.os2sub-teaser-heading-title {
 
 				&,
 				> a {
@@ -47,14 +47,14 @@
 // --------------------------------------------------
 
 // With image
-.fki-message-notification-teaser {
+.os2sub-message-notification-teaser {
 
-	&.fki-message-notification-teaser-variant-with-image {
+	&.os2sub-message-notification-teaser-variant-with-image {
 		background-color: @fki-spotbox-with-image-background-color;
 
-		.fki-teaser-heading {
+		.os2sub-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.os2sub-teaser-heading-title {
 				.heading-h4;
 
 				&,
@@ -64,7 +64,7 @@
 			}
 		}
 
-		.fki-teaser-image {
+		.os2sub-teaser-image {
 			display: block;
 			.border-top-radius(@fki-spotbox-border-radius);
 			overflow: hidden;
@@ -74,7 +74,7 @@
 			}
 		}
 
-		.fki-teaser-body {
+		.os2sub-teaser-body {
 			display: none;
 		}
 	}
@@ -88,77 +88,77 @@
 @media @media-query-mobile {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Print
 @media print {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // Touch
 .touch {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // No touch
 .no-touch {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2sub-message-notification-teaser {}
 }
 
 // --------------------------------------------------
@@ -166,4 +166,4 @@
 // --------------------------------------------------
 
 // Message notification mixin
-.fki-mixin-spotbox-teaser() {}
+.os2sub-mixin-spotbox-teaser() {}
