--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser-spotbox.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser-spotbox.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-spotbox-teaser
+// | - .os2sub-spotbox-teaser
 // |
 
 // --------------------------------------------------
@@ -29,13 +29,13 @@
 // --------------------------------------------------
 
 // Spotbox
-.fki-spotbox-teaser {
+.os2sub-spotbox-teaser {
 	background-color: @fki-spotbox-background-color;
 	border-radius: @fki-spotbox-border-radius;
 
-	.fki-teaser-heading {
+	.os2sub-teaser-heading {
 
-		.fki-teaser-heading-title {
+		.os2sub-teaser-heading-title {
 			.heading-h5;
 
 			&,
@@ -45,14 +45,14 @@
 		}
 	}
 
-	.fki-teaser-body {
+	.os2sub-teaser-body {
 
-		.fki-teaser-body-text {
+		.os2sub-teaser-body-text {
 			color: #8c9eb6;
 		}
 	}
 
-	.fki-teaser-image {
+	.os2sub-teaser-image {
 		display: none;
 	}
 }
@@ -62,15 +62,15 @@
 // --------------------------------------------------
 
 // With image
-.fki-spotbox-teaser {
+.os2sub-spotbox-teaser {
 
-	&.fki-spotbox-teaser-variant-with-image {
+	&.os2sub-spotbox-teaser-variant-with-image {
 		padding: 0;
 		background-color: @fki-spotbox-with-image-background-color;
 
-		.fki-teaser-heading {
+		.os2sub-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.os2sub-teaser-heading-title {
 				.heading-h4;
 
 				&,
@@ -80,7 +80,7 @@
 			}
 		}
 
-		.fki-teaser-image {
+		.os2sub-teaser-image {
 			display: block;
 			.border-top-radius(@fki-spotbox-border-radius);
 			overflow: hidden;
@@ -91,7 +91,7 @@
 			}
 		}
 
-		.fki-teaser-body {
+		.os2sub-teaser-body {
 			display: none;
 		}
 	}
@@ -105,14 +105,14 @@
 @media @media-query-mobile {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Spotbox
-	.fki-spotbox-teaser {
+	.os2sub-spotbox-teaser {
 		margin-bottom: @fki-spotbox-xs-stacked-spacing !important;
 	}
 }
@@ -121,14 +121,14 @@
 @media @media-query-tablet {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Spotbox
-	.fki-spotbox-teaser {
+	.os2sub-spotbox-teaser {
 		margin-bottom: @fki-spotbox-sm-stacked-spacing !important;
 	}
 }
@@ -137,14 +137,14 @@
 @media @media-query-desktop {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Spotbox
-	.fki-spotbox-teaser {
+	.os2sub-spotbox-teaser {
 		margin-bottom: @fki-spotbox-md-stacked-spacing !important;
 	}
 }
@@ -153,14 +153,14 @@
 @media @media-query-large-desktop {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Spotbox
-	.fki-spotbox-teaser {
+	.os2sub-spotbox-teaser {
 		margin-bottom: @fki-spotbox-lg-stacked-spacing !important;
 	}
 }
@@ -169,21 +169,21 @@
 @media print {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // Touch
 .touch {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // No touch
 .no-touch {
 
 	// Spotbox
-	.fki-spotbox-teaser {}
+	.os2sub-spotbox-teaser {}
 }
 
 // --------------------------------------------------
@@ -191,4 +191,4 @@
 // --------------------------------------------------
 
 // Spotbox mixin
-.fki-mixin-spotbox-teaser() {}
+.os2sub-mixin-spotbox-teaser() {}
