--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/teaser/teaser.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-teaser
+// | - .os2sub-teaser
 // |
 
 // --------------------------------------------------
@@ -22,19 +22,19 @@
 // --------------------------------------------------
 
 // Teaser
-.fki-teaser {
+.os2sub-teaser {
     padding: @fki-teaser-inner-top-bottom-spacing 0;
 
-    .fki-teaser-info {
+    .os2sub-teaser-info {
         padding: @fki-teaser-inner-entity-info-top-spacing @fki-teaser-inner-left-right-spacing;
         padding-top: 0;
     }
 
     // Heading
-    .fki-teaser-heading {
+    .os2sub-teaser-heading {
         padding: @fki-teaser-inner-heading-top-bottom-spacing @fki-teaser-inner-left-right-spacing;
 
-        .fki-teaser-heading-title {
+        .os2sub-teaser-heading-title {
             .heading-h4;
             margin: 0;
         }
@@ -45,25 +45,25 @@
     }
 
     // Image
-    .fki-teaser-image-container {
+    .os2sub-teaser-image-container {
         max-width: 120px;
     }
-    .fki-teaser-image {
+    .os2sub-teaser-image {
         padding-left: @fki-teaser-inner-left-right-spacing;
     }
 
     // Body
-    .fki-teaser-body {
+    .os2sub-teaser-body {
         padding: @fki-teaser-inner-body-top-bottom-spacing @fki-teaser-inner-left-right-spacing;
         padding-bottom: 0;
 
-        + .fki-teaser-footer {
+        + .os2sub-teaser-footer {
             padding-top: 0;
         }
     }
 
     // Footer
-    .fki-teaser-footer {
+    .os2sub-teaser-footer {
         padding: @fki-teaser-inner-footer-top-bottom-spacing @fki-teaser-inner-left-right-spacing;
         padding-bottom: 0;
     }
