--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/user-picture.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/elements/user-picture.less
@@ -108,4 +108,4 @@
 // --------------------------------------------------
 
 // User picture mixin
-.fki-mixin-user-picture() {}
+.os2sub-mixin-user-picture() {}
