--- a/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/full/full.less
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/less/template/view-modes/full/full.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-full
+// | - .os2sub-full
 // |
 
 // --------------------------------------------------
@@ -15,27 +15,27 @@
 // --------------------------------------------------
 
 // Full node
-.fki-full {
+.os2sub-full {
 
-	.fki-full-heading {
+	.os2sub-full-heading {
 
-		.fki-full-heading-title {
+		.os2sub-full-heading-title {
 			.heading-h3;
 			margin: 8px 0;
 		}
 	}
 
-	.fki-full-intro {
+	.os2sub-full-intro {
 		color: @brand-secondary;
 		.heading-h5;
 		font-weight: @headings-font-weight-bold;
 	}
 
-	.fki-full-body-references {
+	.os2sub-full-body-references {
 		margin-bottom: 20px;
 	}
 
-	.fki-full-body-action-buttons {}
+	.os2sub-full-body-action-buttons {}
 }
 
 // --------------------------------------------------
@@ -46,77 +46,77 @@
 @media @media-query-mobile {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Print
 @media print {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // Touch
 .touch {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // No touch
 .no-touch {
 
 	// Full node
-	.fki-full {}
+	.os2sub-full {}
 }
 
 // --------------------------------------------------
@@ -124,13 +124,13 @@
 // --------------------------------------------------
 
 // Full node mixin
-.fki-mixin-full() {}
+.os2sub-mixin-full() {}
 
 
 // Dato visning
 
-.fki-full-body .date-display-single .date-display-range { display: inline; }
+.os2sub-full-body .date-display-single .date-display-range { display: inline; }
 
-.fki-full-body .views-bootstrap-accordion-plugin-style {
+.os2sub-full-body .views-bootstrap-accordion-plugin-style {
 	margin: 10px 0;
 }
